# M3uProxy

./: docker-compose.yml  项目规划.md
m3u_proxy/: .dockerignore  Cargo.toml  Dockerfile  Gather.m3u
m3u_proxy/src/: config.rs  error.rs  main.rs
m3u_proxy/src/handlers/: channel.rs  mod.rs  play.rs  playlist.rs  segment.rs
m3u_proxy/src/models/: channel.rs  mod.rs
m3u_proxy/src/services/: channel_manager.rs  m3u8_rewriter.rs  m3u_parser.rs  mod.rs  proxy.rs
m3u_proxy_frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
m3u_proxy_frontend/src/: App.vue  style.css
m3u_proxy_frontend/src/components/: ChannelList.vue  VideoPlayer.vue
m3u_proxy_frontend/src/services/: api.ts
m3u_proxy_frontend/src/types/: channel.ts
